--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.6",
     "gh-pages": "^1.0.0",
-    "parcel": "^1.12.4"
+    "parcel": "^1.12.4",
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "components": "^0.1.0",
@@ -18,7 +22,7 @@
     "mobx-react": "^6.3.1",
     "promise.prototype.finally": "^3.1.2",
     "query-string": "^6.13.7",
-    "react": ">=15",
+    "react": "16",
     "react-dom": "^16.0.0",
     "react-router-dom": "^5.2.0",
     "superagent": "^6.1.0",
